# tgqif

./: .dir-locals.el  CMakeLists.txt  Makefile  WORKSPACE  config_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  main_8cpp.js  navtreeindex0.js
.github/workflows/: workflow.yml
configs/: Doxyfile
curl/: BUILD
doc/html/: config_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  navtreedata.js
doc/html/search/: defines_1.js  pages_0.js  searchdata.js
include/: qif.hpp  tg.hpp
json/: BUILD  json.cpp  json.hpp  json_test.cpp
main/: BUILD  global.bzl  main.cpp
qif/: BUILD
rapidjson/: BUILD
scripts/: publish-ghpages.sh
search/: all_0.js  defines_0.js
src/: json.cpp  main.cpp  qif.cpp  tg.cpp
ssl/: BUILD
tests/: json.cpp  main.cpp
tests/resource/: test.json
tg/: BUILD
tgbot/: BUILD
zlib/: BUILD
